--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-	"name": "com.thebaddest.databasemodule",
-	"version": "1.0.0",
-	"displayName": "DatabaseModule",
-	"description": "Database Module for Unity Game",
-	"unity": "2020.3",
-	"samples": [
-		{
-			"displayName": "LeaderBoard Local Sample",
-			"description": "LeaderBoard Local Sample in which a user find his score and rank in the leaderboard",
-			"path": "Samples~"
-		}
-	],
-	"author": {
-		"name": "Umair Saifullah",
-		"email": "contact@umairsaifullah.com",
-		"url": "https://www.umairsaifullah.com"
-	},
-	"documentationUrl": "https://github.com/UmairSaifullah01/Database",
-	"repository": {
-		"url": "https://github.com/UmairSaifullah01/Database",
-		"type": "https://github.com/UmairSaifullah01/Database.git",
-		"revision": ""
-	},
-	"dependencies": {}
+  "name": "com.thebaddest.databasemodule",
+  "version": "1.2.0",
+  "displayName": "DatabaseModule",
+  "description": "Enhanced Database Module for Unity with indexing, querying, sorting, and modern UI Toolkit editor. Features LINQ-style operations, bulk processing, and performance optimizations.",
+  "unity": "2020.3",
+  "samples": [
+    {
+      "displayName": "LeaderBoard Local Sample",
+      "description": "LeaderBoard Local Sample in which a user find his score and rank in the leaderboard",
+      "path": "Samples~"
+    }
+  ],
+  "author": {
+    "name": "Umair Saifullah",
+    "email": "contact@umairsaifullah.com",
+    "url": "https://www.umairsaifullah.com"
+  },
+  "documentationUrl": "https://github.com/UmairSaifullah01/Database",
+  "repository": {
+    "url": "https://github.com/UmairSaifullah01/Database",
+    "type": "https://github.com/UmairSaifullah01/Database.git",
+    "revision": ""
+  },
+  "dependencies": {}
 }
-			
