--- a/Editor/THEBADDEST.DatabaseModule.Editor.asmdef
+++ b/Editor/THEBADDEST.DatabaseModule.Editor.asmdef
@@ -2,7 +2,8 @@
     "name": "THEBADDEST.DatabaseModule.Editor",
     "rootNamespace": "",
     "references": [
-        "GUID:494a103a7c0d8420ca71833aedbbff01"
+        "GUID:494a103a7c0d8420ca71833aedbbff01",
+        "GUID:9aa198fb016e749faaeb1d7f6a65f3f1"
     ],
     "includePlatforms": [
         "Editor"
